test/errors/uint_bits_too_small.haste
const a: uint0 = 0;
